objects/DMA__c.object
<CustomObject>
    <fields>
        <fullName>Contributes_to_an_OAV_Discount__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates of a given DMA has been factored into the overall OAV Discount. This field is used by the Investment Analysis team: do not deprecate or otherwise alter without their explicit authorization to do so. This field has been determined to be necessary as of Q1 2020. Subject to review for relevance Q4 2021.</description>
        <inlineHelpText>Indicates of a given DMA has been factored into the overall OAV Discount.</inlineHelpText>
        <label>Contributes to an OAV Discount</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMA_Action__c</fullName>
        <description>Indicates the action to be performed against the proposed DMA. This field is used by the Investment Analysis team: do not deprecate or otherwise alter without their explicit authorization to do so. This field has been determined to be necessary as of Q1 2020. Subject to review for relevance Q4 2021.</description>
        <inlineHelpText>Indicates the action to be performed against the proposed DMA.</inlineHelpText>
        <label>DMA Action</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>DMA Confirmed</fullName>
                </value>
                <value>
                    <fullName>Order Report</fullName>
                </value>
                <value>
                    <fullName>Exclude</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DMA_Source__c</fullName>
        <description>Indicates the Source of the DMA This field is used by the Investment Analysis team: do not deprecate or otherwise alter without their explicit authorization to do so. This field has been determined to be necessary as of Q1 2020. Subject to review for relevance Q4 2021.</description>
        <inlineHelpText>Indicates the Source of the DMA</inlineHelpText>
        <label>DMA Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Home Inspection</fullName>
                </value>
                <value>
                    <fullName>Appraisal</fullName>
                </value>
                <value>
                    <fullName>Pest Inspection</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Deferred_Maintenance_Item_Satisfied__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deferred_Maintenance_Item_Satisfied</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Deferred_Maintenance_Item__c</fullName>
        <label>DMA Text</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Inspection_Date__c</fullName>
        <label>Inspection Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Is_Urgent_Fix__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Manually marked by the IA when identifying if an issue needs to be fixed quickly</description>
        <label>Urgent Fix?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity_Text__c</fullName>
        <formula>Opportunity__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>DMAs</relationshipLabel>
        <relationshipName>DMAs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Page_Number__c</fullName>
        <label>Page Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Requirement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Requirement</label>
        <referenceTo>Current_Conditions__c</referenceTo>
        <relationshipLabel>DMAs</relationshipLabel>
        <relationshipName>DMAs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total_Number_of_Pages__c</fullName>
        <label>Total Number of Pages</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Urgent_Fix_Type__c</fullName>
        <description>How will the customer resolve the urgent fix?</description>
        <label>Urgent Fix Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pre-Close</fullName>
                </value>
                <value>
                    <fullName>Escrow Holdback</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>DMA</label>
    <nameField>
        <displayFormat>DMA-{000000}</displayFormat>
        <label>DMA Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DMAs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>